# ESP32_datalogger

./: .gitignore  .gitmodules  BUILD.MD  BUILD.md  CMakeLists.txt  ESP32_datalogger.ino  Makefile  README.md  TODO.md  arduino_secrets.h.example  boards.local.txt  ePaper.cpp  ePaper.h  myLib.cpp  myLib.h  sdkconfig.defaults  sdkconfig_firebeetle  settings.h  settings.h.example  settings_Firebeetle.h  settings_Heltec_ESP32_Kit.h  settings_heizung.h  settings_heizung_module_1.h  sketch.ino  sketch.json
.gitsecret/: index.html
ESPImageSrv/: .gitignore  ESPImageSrv.py
components/arduino-libraries/: CMakeLists.txt
main/: CMakeLists.txt  main.cpp
partitiontables/: partitions_16MB.csv  partitions_4MB.csv
scripts/: build_ota_images  set_build_target
src/: arduino_secrets.h.example  ePaper.cpp  ePaper.h  fs.cpp  fs.h  history.cpp  history.h  myLib.cpp  myLib.h  ota.cpp  ota.h  settings.h  settings_Firebeetle.h  settings_Heltec_ESP32_Kit.h  settings_example.h  settings_heizung_module_1.h  settings_heizung_module_2.h
src/epd1in54_v2/: README.md  epd1in54_V2.cpp  epd1in54_V2.h  epdif.cpp  epdif.h  epdpaint.cpp  font12.c  font16.c  font20.c  font24.c  font48.c  font8.c  fonts.h
