idf_component_register(
    REQUIRES arduino OneWireNg
    SRC_DIRS "Arduino-Temperature-Control-Library"
    "Adafruit_BusIO"
    "Adafruit_SSD1306"
    "Adafruit-GFX-Library"
    "Arduino-LiquidCrystal-I2C-library"
    
    INCLUDE_DIRS "Arduino-Temperature-Control-Library"
    "Adafruit_BusIO"
    "Adafruit_SSD1306"
    "Adafruit-GFX-Library"
    "Arduino-LiquidCrystal-I2C-library"
    )
